
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-4 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1133] Fixed issues with hotkey behavior
- [#MODX-1230] Fixed issue where drag Resource to symlink/weblink content field would add tags as well
- [#MODX-1273] Added OnLoadWebPageCache event invocation to modRequest->getResource().
- [#MODX-1273] Fixed events in User update/create form
- Enabled compression of manager JS scripts by changing the Setting "compress_js" to true.
- Upgraded ExtJS to ExtJS 3.0.2
- [#MODX-1270] OnManagerCreateGroup and OnWebCreateGroup events now fire
- [#MODX-1237] Fixed warning in modParser with regards to uninitialized variable
- [#MODX-979] Added password_generated_length (the length of the auto-generated password) and password_min_length (the minimum length for a password)
- Cleaned up usergroup processors
- Added sanity checks to usergroup processors
- Prevent possible issue on usergroup update that would wipe related objects
- Prevent possible issue that would allow user to remove Administrator group
- Removed some legacy todo statements
- Moved Element category reset on modCategory object remove to modCategory class
- Cleaned up modResourceGroup, modTemplate helper methods
- Added modUser::joinGroup(group,(optional)role) and modUser::leaveGroup(group) for easier development 
- Optimized getrecentlyeditedresources processor
- Make sure config.js.php outputs proper headers
- Commented out Content-Length headers on lang.js.php, for some reason was slowing down servers
- [#MODX-1256] Fixed issue with Resource tree not being visible in Resource Groups page
- Fixed issues with Import HTML/Resources pages; properly convert to MODExt
- [#MODX-1202] Fixed issue where Element name was missing in Duplicate window