@@ -113,7 +113,7 @@ if ($modx->hasPermission('view_chunk')) {
         'id' => 'n_type_chunk',
         'leaf' => false,
         'cls' => 'icon-chunk',
-        'href' => '',
+        'page' => '',
         'type' => 'chunk',
         'draggable' => false,
         'menu' => array('items' => $chunkMenu),
@@ -217,7 +217,7 @@ if ($modx->hasPermission('view_category')) {
         'id' => 'n_category',
         'leaf' => 0,
         'cls' => 'icon-category',
-        'href' => '',
+        'page' => '',
         'type' => 'category',
         'draggable' => false,
         'menu' => array('items' => $categoryMenu),
