@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-4 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-1130] Fixed issue with parent triggerfield; also redid how tree hrefs load so that clicking on a node in the tree to load url can be disabled
 - [#MODX-1133] Fixed issues with hotkey behavior
 - [#MODX-1230] Fixed issue where drag Resource to symlink/weblink content field would add tags as well
 - [#MODX-1273] Added OnLoadWebPageCache event invocation to modRequest->getResource().
